chore: update maven structure